--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head> <link rel="stylesheet" href="style.css">
 <body>
 
-</body>
+</body> Hello welcome to our website of american girl dolls!
 </html>
 <!DOCTYPE html>
 <html lang="en">
