--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <p>Discover a world of dolls with diverse backgrounds, each with their own unique style and story.</p>
         <div class="gallery">
             <!-- Gallery images go here -->
-            <img src="doll1.jpg" alt="Historical Doll">
+            <img src="https://images.mattel.net/image/upload/w_3024,c_scale/f_auto/q_auto:low/shop-ag-prod/files/itqbejdahtv4o0qx074s.png?v=1729722483" alt="Historical Doll">
             <img src="doll2.jpg" alt="Contemporary Doll">
             <img src="doll3.jpg" alt="Special Edition Doll">
         </div>
