Added image of doll

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         <div class="gallery">
             <!-- Gallery images go here -->
             <img src="https://images.mattel.net/image/upload/w_3024,c_scale/f_auto/q_auto:low/shop-ag-prod/files/itqbejdahtv4o0qx074s.png?v=1729722483" alt="Historical Doll">
-            <img src="doll2.jpg" alt="Contemporary Doll">
+            <img src="il_570xN.3125131475_1y1v.avif" alt="Contemporary Doll">
             <img src="doll3.jpg" alt="Special Edition Doll">
         </div>
     </section>
