--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     <section id="about">
         <h2>About Us</h2>
         <p>We are dedicated to celebrating the magic and charm of American Girl dolls. From historical dolls to modern characters, each doll has a unique story to tell.</p>
-        <img src="https://images.mattel.net/image/upload/w_2000,c_scale/f_auto/q_auto:low/shop-ag-prod/files/ptv0vc2nbifo5uk" alt="American Girl dolls collection">
+        <img src="https://images.mattel.net/image/upload/w_2000,c_scale/f_auto/q_auto:low/shop-ag-prod/files/ptv0vc2nbifo5ukjsw6n.png?v=1724907382">
     </section>
 
     <!-- Collections Section -->
