--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
             <!-- Gallery images go here -->
             <img src="https://images.mattel.net/image/upload/w_3024,c_scale/f_auto/q_auto:low/shop-ag-prod/files/itqbejdahtv4o0qx074s.png?v=1729722483" alt="Historical Doll">
             <img src="il_570xN.3125131475_1y1v.avif" alt="Contemporary Doll">
-            <img src="https://www.americangirl.com/products/rebecca-doll-book-gjx51" alt="Special Edition Doll">
+            <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSTMcTf3SdN12dCaAg47LBU8wD29dTa6CAq0g&s" alt="Special Edition Doll">
         </div>
     </section>
 
